--- a/patitasbog-frontend/src/components/Principal/Navbar/Navbar.css
+++ b/patitasbog-frontend/src/components/Principal/Navbar/Navbar.css
@@ -8,10 +8,14 @@
   height: var(--navbar-height);
 }
 
+.navbar a{
+  text-decoration: none;
+}
+
 .logo-section {
   display: flex;
   align-items: center; 
-  gap: 0.75rem;
+  gap: 0.2rem;
   color: var(--blue);
   font-weight: bold;
   font-size: 1.2rem;
@@ -61,13 +65,14 @@
 
 .btn-login {
   background-color: var(--orange1); 
-  border-radius: 0.375rem;
+  border-radius: 1rem;
   color: var(--blue); 
   cursor: pointer;
   text-decoration: none;
   font-weight: bold;
   margin-left: 0.3rem;
   padding: 0.5rem 1rem;
+  border: 1px solid var(--blue);
 }
 
 .btn-login:hover {
