--- a/patitasbog-frontend/src/components/Principal/LeftContainer/LeftContainer.css
+++ b/patitasbog-frontend/src/components/Principal/LeftContainer/LeftContainer.css
@@ -1,8 +1,36 @@
 .left-container {
+  display: flex;
   flex: 0 0 60px;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--white); 
   border-right: 1px solid var(--gray); 
-  padding: var(--spacing-unit);
+  padding: 10px 10px;
   box-sizing: border-box;
   overflow-y: auto;
+  align-items: center;
+}
+
+.icono-container {
+  height: 2rem; 
+  width: 2rem;    
+}
+
+.icono-image {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.profile-picture-container {
+  height: 2rem; 
+  width: 2rem;  
+}
+
+.profile-picture {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  object-position: center
 }
