--- a/patitasbog-frontend/src/App.css
+++ b/patitasbog-frontend/src/App.css
@@ -34,5 +34,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0rem;
+    padding-bottom: 0.5rem;
+    width: 100%; 
+    max-width: 800px;
+    box-sizing: border-box;
 }
