--- a/patitasbog-frontend/src/components/Login/FormCambiarClave/FormCambiarClave.css
+++ b/patitasbog-frontend/src/components/Login/FormCambiarClave/FormCambiarClave.css
@@ -13,6 +13,8 @@
 .caja-formulario h1{
     margin-top: 0.3rem;
     margin-bottom: 0.2rem;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .caja-formulario p{
@@ -25,8 +27,8 @@
 .caja-formulario span{
     margin-top: 0.3rem;
     margin-bottom: 0.2rem;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .caja-formulario form{
@@ -36,17 +38,16 @@
 }
 
 .caja-formulario input{
-    margin-top: 0.3rem;
-    margin-bottom: 0.5rem;
-    margin-left: 5%;
-    margin-right: 5%;
-    border: none;
+    width: 100%; 
     height: 2rem;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;  
 }
 
-.caja-formulario button{
-    margin-top: 0.5rem;
-    margin-bottom: 0.2rem;
+.button-principal{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     margin-left: 10%;
     margin-right: 10%;
     background-color: var(--orange1);
