--- a/patitasbog-frontend/src/components/Login/FormRecuperacion/FormRecuperacion.css
+++ b/patitasbog-frontend/src/components/Login/FormRecuperacion/FormRecuperacion.css
@@ -13,20 +13,22 @@
 .caja-formulario h1{
     margin-top: 0.3rem;
     margin-bottom: 0.2rem;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .caja-formulario p{
     margin-top: 0.3rem;
     margin-bottom: 0.2rem;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .caja-formulario span{
     margin-top: 0.3rem;
     margin-bottom: 0.2rem;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .caja-formulario form{
@@ -36,18 +38,16 @@
 }
 
 .caja-formulario input{
-    margin-top: 0.3rem;
-    margin-bottom: 0.5rem;
-    margin-left: 5%;
-    margin-right: 5%;
-    border: none;
-    width: 15rem;
+    width: 100%; 
     height: 2rem;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box; 
 }
 
-.caja-formulario button{
-    margin-top: 0.5rem;
-    margin-bottom: 0.2rem;
+.button-principal{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     margin-left: 10%;
     margin-right: 10%;
     background-color: var(--orange1);
@@ -58,6 +58,7 @@
     border: none;
     font-weight: bold;
 }
+
 
 .caja-formulario button:hover{
     cursor: pointer;
