--- a/patitasbog-frontend/src/App.css
+++ b/patitasbog-frontend/src/App.css
@@ -11,6 +11,7 @@ body {
     line-height: 1.5; 
     color: var(--blue);
     background-color: var(--white); 
+    overflow: hidden;
 }
 
 :root {
@@ -19,6 +20,8 @@ body {
     --blue: #0b2a3f;
     --gray: #d4d2cf;
     --white: #fdfaf5;
+    --red: #ff8c8c;
+    --green: #c1ff72;
     --navbar-height: 50px; 
     --spacing-unit: 16px; 
     --border-radius: 0.375rem; 
@@ -32,9 +35,93 @@ body {
 .container-generic{
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     align-items: center;
     padding: 1rem;
     width: 100%; 
     max-width: 800px;
     box-sizing: border-box;
+}
+
+h1{
+    margin-top: 0.3rem;
+    margin-bottom: 0.2rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+p{
+    margin-top: 0.3rem;
+    margin-bottom: 0.2rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+span{
+    margin-top: 0.3rem;
+    margin-bottom: 0.2rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+input{
+    width: 100%; 
+    height: 2rem;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box; 
+}
+
+.button-principal{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: var(--orange1);
+    color: var(--blue);
+    font-size: 1rem;
+    padding: 0.6rem 4rem;
+    border-radius: 2rem;
+    border: none;
+    font-weight: bold;
+}
+
+.button-principal:hover{
+    cursor: pointer;
+}
+
+.button-secondary{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: var(--white);
+    color: var(--blue);
+    font-size: 1rem;
+    padding: 0.6rem 4rem;
+    border-radius: 2rem;
+    border: none;
+    font-weight: bold;
+}
+
+.button-secondary:hover{
+    cursor: pointer;
+}
+
+.button-three{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: var(--gray);
+    color: var(--blue);
+    font-size: 1rem;
+    padding: 0.6rem 4rem;
+    border-radius: 2rem;
+    border: none;
+    font-weight: bold;
+}
+
+.button-secondary:hover{
+    cursor: pointer;
 }
