Updating input password

--- a/patitasbog-frontend/src/components/Login/PasswordInput/PasswordInput.css
+++ b/patitasbog-frontend/src/components/Login/PasswordInput/PasswordInput.css
@@ -24,7 +24,7 @@
 
 .toggle-password-button {
     position: absolute; 
-    right: 0.5rem; 
+    right: 5%; 
     background: none;
     border: none;
     cursor: pointer;
