[200~Creating the view and form for submitting lost pet reports

--- a/patitasbog-frontend/src/components/Principal/PopUpMessages/Success.css
+++ b/patitasbog-frontend/src/components/Principal/PopUpMessages/Success.css
@@ -13,7 +13,7 @@
 
 .success-popup{
   background-color: var(--green);
-  padding: 1rem;
+  padding: 1rem 2rem;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   max-width: 50%;
   text-align: center;
