--- a/patitasbog-frontend/src/App.css
+++ b/patitasbog-frontend/src/App.css
@@ -72,6 +72,7 @@ input{
     border: none;
     border-radius: 5px;
     box-sizing: border-box; 
+    padding: 0rem 0.5rem;
 }
 
 .button-principal{
