--- a/patitasbog-frontend/src/components/Principal/PopUpMessages/Fail.css
+++ b/patitasbog-frontend/src/components/Principal/PopUpMessages/Fail.css
@@ -13,7 +13,7 @@
 
 .fail-popup{
   background-color: var(--red);
-  padding: 1rem;
+  padding: 1rem 2rem;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   max-width: 50%;
   text-align: center;
@@ -23,4 +23,10 @@
 .fail-span{
   color: var(--blue);
   text-decoration: underline;  
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
