Fixing font problems

--- a/patitasbog-frontend/src/components/Reportes/FormCrearPerdida/FormCrearPerdida.css
+++ b/patitasbog-frontend/src/components/Reportes/FormCrearPerdida/FormCrearPerdida.css
@@ -115,6 +115,7 @@ form .input-foto {
   margin-right: 12px;
   font-size: 15px;
   transition: background-color 0.2s ease;
+  font-family: 'League Spartan', sans-serif; ;
 }
 
 .input-foto::file-selector-button:hover {
