--- a/patitasbog-frontend/src/components/Login/FormLogin/FormLogin.css
+++ b/patitasbog-frontend/src/components/Login/FormLogin/FormLogin.css
@@ -7,7 +7,7 @@
     padding: 1rem;
     width: 60%;
 }
-
+/* Texto de bienvenida */
 .texto-bienvenida h2{
     margin-top: 0;
     margin-bottom: 0;
