--- a/patitasbog-frontend/src/styles/VisualizarReportes.css
+++ b/patitasbog-frontend/src/styles/VisualizarReportes.css
@@ -8,19 +8,24 @@
 .visualizacion-container a{
     text-decoration: none;
     color: var(--blue);
+    margin-top: 0.8rem;
 }
 
 .cabecera-visualizacion{
     display: flex;
-    padding: 0rem 0rem;
+    padding: 0.4rem 0rem;
     width: 100%;
     border-bottom: 1px solid var(--gray);
+}
+.cabecera-visualizacion a{
+    text-decoration: none;
+    margin-bottom: 0.8rem;
 }
 
 .reporte-perdida-container{
     display: flex;
     flex-direction: row;
-    padding: 0.5rem 1rem;
+    padding: 0.3rem 1rem;
     border-bottom: 1px solid var(--gray);
 }
 
@@ -29,9 +34,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-left:1%;
-    margin-right:1%;
-    margin-bottom: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .titulo-reporte-perdida{
@@ -66,7 +70,6 @@
     gap: 1rem;
     flex-wrap: wrap; 
     width: 100%;
-    margin-bottom: 1%;
     margin-top: 1%;
 }
 
